<resources>
    <string name="app_name">Verkehrstracking</string>
    <string name="main_intro">Diese App kann Fahrzeuge des öffentlichen Verkehrs in der Nähe identifizieren. Aktuell werden Fahrzeuge der Verkehrsbetriebe in Hannover und einige wenige von Eisenbahnverkehrsunternehmen unterstützt.</string>
    <string name="submit_data">Daten erfassen</string>
    <string name="locate">Lokalisieren</string>
    <string name="main_disclaimer">Diese App steht in keinem Zusammenhang mit einem Verkehrsbetrieb oder einem Eisenbahnverkehrsunternehmen.</string>
    <string name="enter_vehicle_name">Fahrzeugnummer eingeben</string>
</resources>
