<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_intro" />

    <EditText
        android:id="@+id/inpBahnID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/enter_vehicle_name"
        android:inputType="text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCapture"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:text="@string/submit_data"
        app:icon="@drawable/wifi"
        style="@style/Widget.MaterialComponents.Button.Icon"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_captureResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLocate"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorPrimary"
        android:text="@string/locate"
        app:icon="@drawable/crosshairs_gps"
        style="@style/Widget.MaterialComponents.Button.Icon"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:visibility="gone"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvDisclaimer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/main_disclaimer" />

</LinearLayout>